Files needed by Pmtools
Change-Id: If76c6a13f9ffc3f971133b7ebe1695db24cb221b
Original-Change-Id: I41e37909a37906d95e1b5a12feb09a6141c5a57b
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/75337
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Reviewed-by: RAHUL BATRA <rbatra@us.ibm.com>
Reviewed-by: RANGANATHPRASAD G. BRAHMASAMUDRA <prasadbgr@in.ibm.com>
Reviewed-by: Gregory S. Still <stillgs@us.ibm.com>
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/79942
Reviewed-by: RAJA DAS <rajadas2@in.ibm.com>

--- a/src/import/chips/p10/common/ppe/boltonlib/gpe/Makefile
+++ b/src/import/chips/p10/common/ppe/boltonlib/gpe/Makefile
@@ -52,13 +52,14 @@ libpk.a: kernel ppe42 trace gpe
 gpe: $(OBJS)
 
 trace:
-	$(MAKE) -I $(IMAGE_SRCDIR) -C ../trace
+	$(MAKE) -I $(IMAGE_SRCDIR) -C ../../ppetrace
 
 kernel:
-	$(MAKE) -I $(IMAGE_SRCDIR) -C ../kernel
+	$(MAKE) -I $(IMAGE_SRCDIR) -C ../../pk/kernel
 
 ppe42:
-	$(MAKE) -I $(IMAGE_SRCDIR) -C ../ppe42
+	$(MAKE) -I $(IMAGE_SRCDIR) -C ../../pk/ppe42
+	$(MAKE) -I $(IMAGE_SRCDIR) -C ../../baselib
 
 
 $(OBJS) $(OBJS:.o=.d): | $(OBJDIR)
