--- a/src/import/chips/p10/common/ppe/ppetrace/ppetracepp/Makefile
+++ b/src/import/chips/p10/common/ppe/ppetrace/ppetracepp/Makefile
@@ -29,7 +29,7 @@ ppetracepp: ppetracepp.C
 #	g++ -O3 -w -x c++ -fPIC -g -I./ ppetracepp.C -o ppetracepp
 
 ppe2fsp: ppe2fsp.c ppe2fsp_cmd.c
-	gcc -w -g -I./ -I../../pk/trace ppe2fsp.c ppe2fsp_cmd.c -o ppe2fsp
+	gcc -w -g -I./ -I../ ppe2fsp.c ppe2fsp_cmd.c -o ppe2fsp
 
 clean:
 	rm ppetracepp ppe2fsp
