Update to P10 PK Kernel Directories
  - Updated path to ppetrace,kernel,ppe42 in standard/Makefile
  - Removed iota_app_cfg.h reference from standard/std_irq_config.h
  - Added div64/div32.S in baselibfiles.mk
  - Updated baselib/Makefile to generate pkbaselib.a

Change-Id: I7abe043c70259a79d79ae3e2d0e868c28813b2c3
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/79998
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Tested-by: PPE CI <ppe-ci+hostboot@us.ibm.com>
Reviewed-by: Douglas R Gilbert <dgilbert@us.ibm.com>
Reviewed-by: Gregory S Still <stillgs@us.ibm.com>
Reviewed-by: Jennifer A Stofer <stofer@us.ibm.com>
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/83449
Reviewed-by: RAJA DAS <rajadas2@in.ibm.com>

--- a/src/import/chips/p10/common/ppe/baselib/Makefile
+++ b/src/import/chips/p10/common/ppe/baselib/Makefile
@@ -22,15 +22,24 @@
 # permissions and limitations under the License.
 #
 # IBM_PROLOG_END_TAG
+export SUB_OBJDIR = /pkbaselib
+
 include img_defs.mk
 include baselibfiles.mk
 
 
 OBJS := $(addprefix $(OBJDIR)/, $(PPEBASELIB_OBJECTS))
 
-all: $(OBJS)
+all: $(OBJS) pkbaselib
+
+pkbaselib: $(OBJS)
+	$(AR) crs $(OBJDIR)/libpkbase.a $(OBJDIR)/*.o
 
 $(OBJS) $(OBJS:.o=.d): | $(OBJDIR)
+
+
+clean:
+	rm -rf $(OBJDIR)
 
 $(OBJDIR):
 	mkdir -p $(OBJDIR)
