--- a/src/import/chips/p10/common/ppe/boltonlib/standard/Makefile
+++ b/src/import/chips/p10/common/ppe/boltonlib/standard/Makefile
@@ -52,13 +52,13 @@ libpk.a: kernel ppe42 trace std
 std: $(OBJS)
 
 trace:
-	$(MAKE) -I $(IMAGE_SRCDIR) -C ../trace
+	$(MAKE) -I $(IMAGE_SRCDIR) -C ../../ppetrace
 
 kernel:
-	$(MAKE) -I $(IMAGE_SRCDIR) -C ../kernel
+	$(MAKE) -I $(IMAGE_SRCDIR) -C ../../pk/kernel
 
 ppe42:
-	$(MAKE) -I $(IMAGE_SRCDIR) -C ../ppe42
+	$(MAKE) -I $(IMAGE_SRCDIR) -C ../../pk/ppe42
 
 
 $(OBJS) $(OBJS:.o=.d): | $(OBJDIR)
