Measurement Image support for SBE enabled
>> Measurment image enable or disable supported
>> By default Measurement was in disable mode

Change-Id: I8006341564bc9d4531b353b5ee4ec740d79b86c7
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/84207
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Reviewed-by: RAJA DAS <rajadas2@in.ibm.com>

--- a/src/boot/Makefile
+++ b/src/boot/Makefile
@@ -35,8 +35,8 @@ L1_BOOT_OBJS := $(addprefix $(OBJDIR)/, $(L1_BOOT_OBJECTS))
 
 #This will generate L1 Measurement *.o objects
 #this gets directly appended into measurement seeprom
-#when img is passed as seeprom or measure, we need to enable this.
-ifeq ($(img), $(filter $(img), seeprom measurement))
+#when MEASUREMENT_IMAGE_SUPPORTED is set with 1 to enable this.
+ifeq ($(MEASUREMENT_IMAGE_SUPPORTED), 1)
 L1_MEASUREMENT_OBJS := $(addprefix $(OBJDIR)/, $(L1_MEASUREMENT_OBJECTS))
 endif
 
