Dynamic init coordination
This commit processes and produces following outputs:
- Global p10_dynamic_features.xml in path
  chips/p10/procedures/xml/dynamic
  with unique value associated with each features
- Header p10_dynamic.H file that contains structure
  detail of dynamic features & services properties
- Binary dynamic features file - p10.dynamic_features.bin
  in path output/images/dynamic
- Binary dynamic services file - p10.dynamic_services.bin
  in path output/images/dynamic
- All feature metaxml files to be available before
  merging this commit. Updated p10_dynamic_features.xml
  to be checked-in with this commit. Also updated
  p10_dynamic.H to be checked-in.
- Added APIs for traversing dynamic binaries
- Global p10_dynamic_init_attributes.xml file

Change-Id: Ib2c37d6589b9215c3db2a48c4055d3488c5a9598
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/95329
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Tested-by: PPE CI <ppe-ci+hostboot@us.ibm.com>
Tested-by: Hostboot CI <hostboot-ci+hostboot@us.ibm.com>
Reviewed-by: Claus M Olsen <cmolsen@us.ibm.com>
Reviewed-by: Joseph J McGill <jmcgill@us.ibm.com>
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/97212
Tested-by: FSP CI Jenkins <fsp-CI-jenkins+hostboot@us.ibm.com>
Reviewed-by: RAJA DAS <rajadas2@in.ibm.com>

--- a/src/tools/imagetool/Makefile
+++ b/src/tools/imagetool/Makefile
@@ -5,7 +5,8 @@
 #
 # OpenPOWER sbe Project
 #
-# Contributors Listed Below - COPYRIGHT 2019
+# Contributors Listed Below - COPYRIGHT 2019,2020
+# [+] International Business Machines Corp.
 #
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -47,7 +48,8 @@ export INCLUDES = -I$(IMAGEPROCS_COMMON_SRCDIR) \
 
 OBJS = $(P10_IMAGE_TOOL_BINDIR)/p10_ipl_image.o  \
        $(P10_IMAGE_TOOL_BINDIR)/ipl_image_tool.o \
-	   $(P10_IMAGE_TOOL_BINDIR)/p10_ddco.o
+	   $(P10_IMAGE_TOOL_BINDIR)/p10_ddco.o \
+	   $(P10_IMAGE_TOOL_BINDIR)/p10_dynamic.o
 
 all:objdir utilities
 
