vbu/contained: Support fused-core RUNN thread sresets
In fused-fused core, chip-contained RUNN IPLs the vector of threads to
sreset needs to be interpreted as follows:

           Cronus
SMTn       sreset      non-fused       fused
--------------------------------------------------------------
SMT1       0x80        0b1000          0b1000, -> small core a
                                       0b0000  -> small core b
SMT2       0xc0        0b1100          0b1000,
                                       0b1000
SMT4       0xf0        0b1111          0b1100,
                                       0b1100
SMT8       0xff        0b1111          0b1111,
                                       0b1111

Change-Id: Id60dcf646845da2de32f93335cd676d21dbcaf42
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/102862
Reviewed-by: SAMUEL D KIRCHHOFF <kirchhoff@us.ibm.com>
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Tested-by: FSP CI Jenkins <fsp-CI-jenkins+hostboot@us.ibm.com>
Reviewed-by: Joseph J McGill <jmcgill@us.ibm.com>
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/108876
Reviewed-by: RAJA DAS <rajadas2@in.ibm.com>
Tested-by: RAJA DAS <rajadas2@in.ibm.com>

--- a/src/import/chips/p10/procedures/utils/contained/p10_contained_ringspin.gen.yaml
+++ b/src/import/chips/p10/procedures/utils/contained/p10_contained_ringspin.gen.yaml
@@ -19,3 +19,13 @@ ec10:
         - ECP.EC.PC.PMU.T1_SIER
         - ECP.EC.PC.PMU.T2_SIER
         - ECP.EC.PC.PMU.T3_SIER
+    set_thread_sreset:
+      spy_names:
+        - ECP.EC.PC.PMC.VT0_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT0_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.PMC.VT1_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT1_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.PMC.VT2_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT2_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.PMC.VT3_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT3_SRESET_ON_1ST_DEC_EN
