Makefile changes to support DFT
General make support for DFT:
- Exclude simics tar for DFT
- Use parsAndCutElfDFT.py for DFT only
    - Put project type in image name, exclude dd level in name
      (naming convention for DFT)
- Don't make tarball for DFT (we have our own process)
- additional content in p10_sbe_attributes, mostly to handle contained
- p10_dft_attributes.xml contains dft-specific attributes for flow
  control, etc.
- Skip pib init sequence for DFT
    - It is already performed before the DFT image boots
- Modernized app/power_dft to reflect app/power
- DFT build infrastructure updates
- Exclude some FIFO prints for DFT that tend to overly pollute our pk
    traces

Updated DFT IPL table
 - Previous implementation did not properly include all required
directories in img_defs.mk.

Relocate attributes for DFT
- by default, procedures find their attributes deep in memory instead of
  in the attribute section provided in the XIP header. For DFT, it makes
  more sense to locate attributes where they can be easily accessed
  instead of copying them to the less accessible location

Consolidate all DFT image types into power_dft
- Because we are now proficient with chipops, we are retiring our use of
  continuous IPLs, which was one driver of image type specialization. In
  addition, we have observed image sizes to be so close between AVP and
  bist images that the effor to maintain the two is no longer
  worthwhile.
- AVP content is always included in builds; thus the -DAVP flag is no
  longer required
- There is now a single IPL flow which contains all steps required for
  either IPL type

Include some attributes we will need later

Temporarily exclude AVP content for a later commit with full
implementation

Change-Id: I54255612277bba1fde1df8d5e21212da87d8303c
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/105195
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Tested-by: Jenkins OP Build CI <op-jenkins+hostboot@us.ibm.com>
Tested-by: Jenk

--- a/src/sbefw/app/power_dft/Makefile
+++ b/src/sbefw/app/power_dft/Makefile
@@ -6,6 +6,7 @@
 # OpenPOWER sbe Project
 #
 # Contributors Listed Below - COPYRIGHT 2016,2020
+# [+] International Business Machines Corp.
 #
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -24,11 +25,11 @@
 #export P2P_ENABLE = 1
 
 ifneq ($(img_mem), seeprom)
-export SUB_OBJDIR = /sbefw/app/power_dft_pibmem
+export SUB_OBJDIR = /sbefw/app/power_pibmem
 OBJS = $(addprefix $(OBJDIR)/, $(APPPOWERPIBMEM_OBJECTS))
 LIBNAME = libsbeapppowerpibmem
 else
-export SUB_OBJDIR = /sbefw/app/power_dft_seeprom
+export SUB_OBJDIR = /sbefw/app/power_seeprom
 GCC-CFLAGS += -mlongcall
 GCC-DEFS += -D__SBEFW_SEEPROM__=1
 OBJS = $(addprefix $(OBJDIR)/, $(APPPOWERSEEPROM_OBJECTS))
