--- a/src/import/chips/p10/procedures/utils/contained/p10_contained_ringspin.gen.yaml
+++ b/src/import/chips/p10/procedures/utils/contained/p10_contained_ringspin.gen.yaml
@@ -29,3 +29,34 @@ ec10:
         - ECP.EC.PC.THRCTL.TCTLCOM.VT2_SRESET_ON_1ST_DEC_EN
         - ECP.EC.PC.PMC.VT3_SRESET_ON_1ST_DEC_EN
         - ECP.EC.PC.THRCTL.TCTLCOM.VT3_SRESET_ON_1ST_DEC_EN
+ec20:
+  engd_path: $PROJECT_ROOT/chips/p10/engd/p10/20
+  functions:
+    restore_active_l3:
+      spy_names:
+        - ECP.L3.L3_MISC.L3CERRS.BACKING_L3_CTL_REG
+        - ECP.L3.L3_MISC.L3CERRS.MODE_REG1
+    restore_backing_l3:
+      spy_names:
+        - ECP.L3.L3_MISC.L3CERRS.MODE_REG0
+        - ECP.L3.L3_MISC.L3CERRS.MODE_REG1
+    disable_core_sreset:
+      spy_names:
+        - ECP.EC.PC.PMC.DECR_EXTENDED_FUNC
+        - ECP.EC.PC.THRCTL.TCTLCOM.DECR_EXTENDED_FUNC
+    set_runn_seed:
+      spy_names:
+        - ECP.EC.PC.PMU.T0_SIER
+        - ECP.EC.PC.PMU.T1_SIER
+        - ECP.EC.PC.PMU.T2_SIER
+        - ECP.EC.PC.PMU.T3_SIER
+    set_thread_sreset:
+      spy_names:
+        - ECP.EC.PC.PMC.VT0_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT0_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.PMC.VT1_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT1_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.PMC.VT2_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT2_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.PMC.VT3_SRESET_ON_1ST_DEC_EN
+        - ECP.EC.PC.THRCTL.TCTLCOM.VT3_SRESET_ON_1ST_DEC_EN
