SB_setting xip along with measurement version passed to HBBL
Following Data set are passed into HBBL as SB_Settings
- Measurement Seeprom Version
- HW Key Hash
- MSV
From this commit onwards, SBE is sharing 2 cacheline worth of
data at the HRMOR address with hostbootloader, since the shared
data can't fit in one cache line.

Change-Id: Ifb8da9a9348a8c743ed0d4ddad9c4b6825681e13
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/109697
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Tested-by: PPE CI <ppe-ci+hostboot@us.ibm.com>
Tested-by: Hostboot CI <hostboot-ci+hostboot@us.ibm.com>
Tested-by: HWSV CI <hwsv-ci+hostboot@us.ibm.com>
Reviewed-by: Michael Baiocchi <mbaiocch@us.ibm.com>
Reviewed-by: Christopher J Engel <cjengel@us.ibm.com>
Reviewed-by: Sumit Kumar <sumit_kumar@in.ibm.com>
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/109701
Tested-by: Jenkins OP Build CI <op-jenkins+hostboot@us.ibm.com>
Tested-by: Jenkins Combined Simics CI <combined-simics-ci+hostboot@us.ibm.com>
Tested-by: FSP CI Jenkins <fsp-CI-jenkins+hostboot@us.ibm.com>
Reviewed-by: RAJA DAS <rajadas2@in.ibm.com>

--- a/src/sbefw/securebootcommon/Makefile
+++ b/src/sbefw/securebootcommon/Makefile
@@ -6,6 +6,7 @@
 # OpenPOWER sbe Project
 #
 # Contributors Listed Below - COPYRIGHT 2021
+# [+] International Business Machines Corp.
 #
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -25,6 +26,7 @@
 # This is an automatically generated prolog.
 #
 export SUB_OBJDIR = /sbefw/securebootcommon
+export VPATH = $(SBE_FW_DIR)/core
 
 OBJS = $(addprefix $(OBJDIR)/, $(SECUREBOOT_COMMON_OBJECTS))
 LIBNAME = libsecurebootcommon
