scan init CPMS_MMAR_MMA_AVAILABLE for contained modes
PM HWP code called in startclocks HWPs manages MMA available
state in mainline istep4 and QME HCODE -- these routines are not
run directly in the RUNN clock start path.

DD1 ISU flush state set ECP.EC.SD.SDD.FORCE_MMA_AVAILABLE, which
effectively ignores the state of the QME MMA available indicator
in terms of executing MMA instructions.

The DD2 ISU flush state, along with the underlying dial, has
changed, and current inits leave the core with the view that
MMA available is not set.  This commit scan inits the QME
sourced MMA available indication to properly reflect that the
MMA is powered up and ready to execute instructions.

Change-Id: I27d8a1462371ebaa4b84a2e21366f1c2c9b4bf29
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/113054
Dev-Ready: Joseph J McGill <jmcgill@us.ibm.com>
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Tested-by: PPE CI <ppe-ci+hostboot@us.ibm.com>
Tested-by: HWSV CI <hwsv-ci+hostboot@us.ibm.com>
Tested-by: Hostboot CI <hostboot-ci+hostboot@us.ibm.com>
Tested-by: FSP CI Jenkins <fsp-CI-jenkins+hostboot@us.ibm.com>
Reviewed-by: Joseph J McGill <jmcgill@us.ibm.com>
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/113056
Tested-by: Jenkins OP Build CI <op-jenkins+hostboot@us.ibm.com>
Tested-by: Jenkins Combined Simics CI <combined-simics-ci+hostboot@us.ibm.com>
Reviewed-by: RAJA DAS <rajadas2@in.ibm.com>

--- a/src/import/chips/p10/procedures/utils/contained/p10_contained_ringspin.gen.yaml
+++ b/src/import/chips/p10/procedures/utils/contained/p10_contained_ringspin.gen.yaml
@@ -29,6 +29,16 @@ ec10:
         - ECP.EC.PC.THRCTL.TCTLCOM.VT2_SRESET_ON_1ST_DEC_EN
         - ECP.EC.PC.PMC.VT3_SRESET_ON_1ST_DEC_EN
         - ECP.EC.PC.THRCTL.TCTLCOM.VT3_SRESET_ON_1ST_DEC_EN
+    set_mma_available:
+      spy_names:
+        - PCBSLEQ.CPMS0.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS0.CPMS_MMAR_MMA_FUNC_RESET
+        - PCBSLEQ.CPMS1.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS1.CPMS_MMAR_MMA_FUNC_RESET
+        - PCBSLEQ.CPMS2.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS2.CPMS_MMAR_MMA_FUNC_RESET
+        - PCBSLEQ.CPMS3.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS3.CPMS_MMAR_MMA_FUNC_RESET
 ec20:
   engd_path: $PROJECT_ROOT/chips/p10/engd/p10/20
   functions:
@@ -60,3 +70,13 @@ ec20:
         - ECP.EC.PC.THRCTL.TCTLCOM.VT2_SRESET_ON_1ST_DEC_EN
         - ECP.EC.PC.PMC.VT3_SRESET_ON_1ST_DEC_EN
         - ECP.EC.PC.THRCTL.TCTLCOM.VT3_SRESET_ON_1ST_DEC_EN
+    set_mma_available:
+      spy_names:
+        - PCBSLEQ.CPMS0.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS0.CPMS_MMAR_MMA_FUNC_RESET
+        - PCBSLEQ.CPMS1.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS1.CPMS_MMAR_MMA_FUNC_RESET
+        - PCBSLEQ.CPMS2.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS2.CPMS_MMAR_MMA_FUNC_RESET
+        - PCBSLEQ.CPMS3.CPMS_MMAR_MMA_AVAILABLE
+        - PCBSLEQ.CPMS3.CPMS_MMAR_MMA_FUNC_RESET
