Xml error parser with files in genfiles directory (obj/power/genfiles)
- Added arg parse module
- Exception handling for missing collect register ffdc and RC id
- Added xml parser changes with target index

Change-Id: I326a4347ab9c311c353c7a51ef249d4ba02bd715
Reviewed-on: http://rchgit01.rchland.ibm.com/gerrit1/124859
Tested-by: Jenkins Server <pfd-jenkins+hostboot@us.ibm.com>
Tested-by: Jenkins OP Build CI <op-jenkins+hostboot@us.ibm.com>
Tested-by: Jenkins Combined Simics CI <combined-simics-ci+hostboot@us.ibm.com>
Tested-by: FSP CI Jenkins <fsp-CI-jenkins+hostboot@us.ibm.com>
Tested-by: Jenkins OP HW <op-hw-jenkins+hostboot@us.ibm.com>
Tested-by: PPE CI <ppe-ci+hostboot@us.ibm.com>
Reviewed-by: Sunil Kumar <skumar8j@in.ibm.com>

--- a/src/sbefw/app/common/Makefile
+++ b/src/sbefw/app/common/Makefile
@@ -5,7 +5,8 @@
 #
 # OpenPOWER sbe Project
 #
-# Contributors Listed Below - COPYRIGHT 2016,2017
+# Contributors Listed Below - COPYRIGHT 2016,2021
+# [+] International Business Machines Corp.
 #
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -34,7 +35,7 @@ GCC-DEFS += -D__SBEFW_SEEPROM__=1
 OBJS = $(addprefix $(OBJDIR)/, $(APPCOMMONSEEPROM_OBJECTS))
 LIBNAME = libsbeappcommonseeprom
 endif
-
+export VPATH = $(GENFILES_DIR)
 include img_defs.mk
 include appcommonfiles.mk
 
